Criar por id de planta por sequence
