# resources/planta.py
@@ -4,6 +4,19 @@ from models.planta import PlantaModel
 from flask_jwt_extended import jwt_required
 
 class Plantas(Resource):
+
+    @jwt_required()
+    def post(self):
+        dados = Planta.argumentos.parse_args()
+        planta = PlantaModel(** dados)
+
+        try:
+            planta.save_planta()
+        except:
+            return {"message": "An internal error ocurred trying to save."}, 500
+
+        return planta.json()
+
     @jwt_required()
     def get(self):
         return {'plantas': [planta.json() for planta in PlantaModel.query.all()]}
@@ -23,21 +36,6 @@ class Planta(Resource):
         if planta:
             return planta.json()
         return {'message': 'Planta not found.'}, 404
-
-    @jwt_required()
-    def post(self, plantaId):
-        if PlantaModel.find_planta(plantaId):
-            return {"message": "Planta '{}' already exists.".format(plantaId)}, 400
-
-        dados = Planta.argumentos.parse_args()
-        planta = PlantaModel(plantaId, ** dados)
-
-        try:
-            planta.save_planta()
-        except:
-            return {"message": "An internal error ocurred trying to save."}, 500
-
-        return planta.json()
 
     @jwt_required()
     def put(self, plantaId):
